deployfile/eks-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-svc
  namespace: eks-workshop
  labels:
    app: eks-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: eks-demo
